Fixed an issue with input controls alignment
The controls (for number or date fields, etc.) where not aligned in a form. This makes the input take 100% width of it's container so that those controls align properly.

--- a/packages/stencil-library/src/components/dnn-input/dnn-input.scss
+++ b/packages/stencil-library/src/components/dnn-input/dnn-input.scss
@@ -55,6 +55,7 @@
     background-color: var(--background);
     color: transparent;
     text-align: var(--input-text-align);
+    width: 100%;
   }
   &.focused{
     border: 1px solid var(--focus-color);
